@@ -1,6 +1,6 @@
 =encoding UTF-8
 
-PostScript-Barcode version 0.004 is Copyright © 2010, Lars Dɪᴇᴄᴋᴏᴡ
+PostScript-Barcode version 0.005 is Copyright © 2010, Lars Dɪᴇᴄᴋᴏᴡ
 
 =head1 NAME
 
